--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,9 +42,13 @@ dependencies {
     compile 'com.google.firebase:firebase-database:10.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:design:26.0.0-alpha1'
-    testCompile 'junit:junit:4.12'
     compile 'com.firebase:firebase-client-android:2.5.2'
     compile 'com.google.android.gms:play-services-auth:10.0.1'
+    testCompile 'junit:junit:4.12'
+
+    compile("com.mikepenz:materialdrawer:6.0.1@aar") {
+        transitive = true
+    }
 }
 
 
